# uber-rides-predictor

./: .gitignore  LICENSE  README.md  app.py  mymodel.ipynb  pyproject.toml  requirements.txt
static/: script.js  style.css
templates/: error.html  index.html
